--- a/src/GUI/Teammates.form
+++ b/src/GUI/Teammates.form
@@ -85,7 +85,7 @@
               <Font name="Segoe UI Semibold" size="18" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new javax.swing.AbstractListModel&lt;String&gt;() {&#xa;    //String[] strings = get_names(array_projects.get(0).getProjectName());&#xa;    String[] strings = {&quot;None&quot;};&#xa;    public int getSize() { return strings.length; }&#xa;    public String getElementAt(int i) { return strings[i]; }&#xa;}" type="code"/>
+              <Connection code="new javax.swing.AbstractListModel&lt;String&gt;() {&#xa;    //String[] strings = get_names(array_projects.get(0).getProjectName());&#xa;    String[] strings = {java.util.ResourceBundle.getBundle(&quot;sk/stu/fiit/bundle&quot;).getString(&quot;NONE&quot;)};&#xa;    public int getSize() { return strings.length; }&#xa;    public String getElementAt(int i) { return strings[i]; }&#xa;}" type="code"/>
             </Property>
           </Properties>
           <AuxValues>
